--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://syhmiisade:XGUaupJeUjdgiQx5@cluster0.g28sm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
+# mongodb+srv://syhmiisade:XGUaupJeUjdgiQx5@cluster0.g28sm.mongodb.net/
+# ERROR: Unable to connect: queryTxt ETIMEOUT cluster0.g28sm.mongodb.net
